# distributed-payment-ledger

./: .env.example  .gitignore  DECISIONS.md  README.md  architecture.excalidraw  docker-compose.yml  eslint.config.js  jest-e2e.config.js  package-lock.json  package.json  tsconfig.json
bank-b/: .env.example  pyproject.toml
bank-b/app/: config.py  db.py  main.py
bank-b/app/accounts/: repository.py  router.py  schemas.py
bank-b/app/domain/: __init__.py  account.py  errors.py  ledger_entry.py  money.py  suspense_account.py
bank-b/app/health/: router.py
bank-b/app/http/: exception_handlers.py
bank-b/app/ledger/: repository.py
bank-b/app/messaging/: connection.py  topology.py
bank-b/app/transfers/: consumer.py  repository.py  router.py  service.py
bank-b/migrations/: 002_create_ledger_entries.sql  003_create_incoming_transfers.sql  004_widen_incoming_transfers_payee_ref.sql
bank-b/scripts/: migrate.py
bank-b/tests/domain/: test_money.py
bank-b/tests/transfers/: test_service.py
docs/adr/: 0001-atomic-single-bank-ledger.md  0002-bilateral-two-bank-saga.md  0003-central-hub-topology.md  README.md
frontend/: .env.example  index.html
frontend/src/: App.css  App.tsx  types.ts  (+1 more)
hub/: .env.example  eslint.config.js  package-lock.json  package.json  tsconfig.json
migrations/: 001_create_accounts.sql  003_create_transfers.sql  004_create_outbox_events.sql  005_create_interbank_transfers.sql  006_create_dev_treasury_account.sql  007_add_payee_bank_id_to_interbank_transfers.sql
scripts/: migrate.ts
src/: app.module.ts  main.ts
test/: saga-e2e.spec.ts
(+93 files in other folders)
